--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 #div-quiz {
-    display: none;
+    /* display: none; */
     /* display: flex;
     flex-direction: column;
     align-items: flex-start; */
