--- a/assets/style.css
+++ b/assets/style.css
@@ -1,35 +1,101 @@
 body {
-    font-size: 62.5%;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  font-size: 62.5%;
+  background-color: aquamarine;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #start-page {
-    display: flex;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-#quiz-section{
-    display: none;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
+#quiz-section {
+  display: none;
 }
 
-#div-quiz {
-    /* display: none; */
-    /* display: flex;
-    flex-direction: column;
-    align-items: flex-start; */
+#highscore {
+  display: none;
 }
 #results {
-    display: none;
+  display: none;
 }
 
+li {
+    text-decoration: none;
+    list-style-type: none;
+    border: .1rem solid black;
+    width: 100%;
+    font-size: 1.5rem;
+}
+#bolder {
+    font-weight: bolder;
+    font-size: 2rem;
+    margin-top: 2rem;
+}
+
+p {
+    font-size: 1.5rem;
+    margin-left: 1.5rem;
+}
+
+#buttonA, #buttonB, #buttonC {
+    margin-bottom: .5rem;
+}
+
+#question-title{
+    font-size: 2rem;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    
+}
+
+h1{
+    font-size: 4rem;
+}
+#topHead {
+    border: .1rem solid black;
+    width: 100%;
+    margin-left: 5rem;
+    font-size: 2rem;
+    padding-left: 2.5rem;
+    text-decoration: underline;
+    display: flex; 
+    align-items: center;
+}
+
+#topHead:hover {
+    text-decoration: underline;
+    color: blue;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#timer {
+    border: .1rem solid black;
+    width: 100%;
+    font-size: 2rem;
+    text-align: right;
+    margin-right: 5rem;
+    padding-right: 2.5rem;
+}
+
+button:hover {
+    cursor: pointer;
+    scale: 1.1;
+}
+
+li{
+    text-align: center;
+    
+}
