cleaned up code with comments and added a prompt

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,13 @@
 body {
   font-size: 62.5%;
-  background-color: aquamarine;
+  background-color: #86BBBD;
+   
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
+  
 }
 
 #start-page {
