--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,9 @@
 body {
   font-size: 62.5%;
-  background-color: #86BBBD;
-   
+  /* background-color: #86BBBD; */
+  background-image: url(./background-keyboard.avif);
+  background-size: cover;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,7 +34,7 @@ body {
 li {
     text-decoration: none;
     list-style-type: none;
-    border: .1rem solid black;
+    border: .1rem solid rgb(221, 109, 193);
     width: 100%;
     font-size: 1.5rem;
 }
@@ -45,6 +47,7 @@ li {
 p {
     font-size: 1.5rem;
     margin-left: 1.5rem;
+    font-weight: bolder;
 }
 
 #buttonA, #buttonB, #buttonC {
@@ -67,7 +70,7 @@ h1{
     font-size: 4rem;
 }
 #topHead {
-    border: .1rem solid black;
+    border-bottom: .2rem solid #5F506B;
     width: 100%;
     margin-left: 5rem;
     font-size: 2rem;
@@ -75,6 +78,7 @@ h1{
     text-decoration: underline;
     display: flex; 
     align-items: center;
+    padding-bottom: .5rem;
 }
 
 #topHead:hover {
@@ -85,12 +89,13 @@ h1{
 }
 
 #timer {
-    border: .1rem solid black;
+    border-bottom: .2rem solid #5F506B;
     width: 100%;
     font-size: 2rem;
     text-align: right;
     margin-right: 5rem;
     padding-right: 2.5rem;
+    padding-bottom: .5rem;
 }
 
 button:hover {
@@ -100,5 +105,18 @@ button:hover {
 
 li{
     text-align: center;
+    
+    }
+
+#reset-button, #start-button {
+    background-color: #5F506B;
+    color: white;
+    font-weight: bolder;
+    width: 100%;
+    font-size: 2em;
+    padding: 1em .5em;
+    border-radius: 30px;
+    box-shadow: 10px 5px 10px 5px gray;
+    border: .15em solid black;
     
 }
